Fix small layout problem
Table header/query columns overlap the select queries dropdown. Fixed by showing header above results.

--- a/templates/screen.sass
+++ b/templates/screen.sass
@@ -137,6 +137,7 @@ header
     position: fixed
     right: 0
     top: 0
+    z-index: 10
 
     > *
         display: inline-block
